FIX: text align on house rules collapse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -155,8 +155,8 @@ footer a {
 
 /* roomdetail.html */
 #roomdetailcarousel {
-    height: 50vh;
-    width: 50vw;
+    height: 39.375rem;
+    width: 75rem;
 }
 
 .roomdetailimg {
